# task-manager-cli

./: .gitignore  README.md  pyproject.toml
src/: crud.py  entities.py  taskmanager.py  utils.py
tests/: conftest.py  test_crud.py  test_utils.py
