[tool.poetry]
name = "for-hitalent"
version = "0.1.0"
description = "CLI Taskmanager"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}, {include = "tests"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
